# zotero-voyant-export

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .guix-channel  ACCESSIBILITY_INITIATIVE.md  BAGIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.adoc  DEVELOPMENT.md  ECHIDNA_ARCHITECTURE_UPDATE_3LANG.md  ECOSYSTEM.scm  FUNDING.yml  GOVERNANCE.adoc  HANDOVER_UPDATE_3LANG.md  LICENSE-MIT.txt  LICENSE-PALIMPSEST.txt  LICENSE.txt  MAINTAINERS.md  MANIFEST_V3_MIGRATION.adoc  META.scm  MIGRATION_PLAN.md  NEXT_STEPS.md  README.adoc  README.v3.adoc  REVERSIBILITY.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE.md  SECURITY.md  STATE.scm  TECH_STACK_MIGRATION.md  TPCF.md  TS_CONVERSION_NEEDED.md  build.ts  (+8 more)
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  comprehensive-quality.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  (+8 more)
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
accessibility-tools/: CAMPAIGN_MATERIALS.md  PROPOSED_STANDARDS.md  README.md
docs/: CITATIONS.adoc
lib/: exporter.js  format.js  ui.js  utils.js  zotero.js
src/: ErrorRecovery.res  Exporter.res  Firefox.res  Format.res  Performance.res  UI.res  Zotero.res  background.v3.res  content_script.v3.res
test/: test-format.js
ui/: styles.css
wasm/: Cargo.toml
wasm/src/: lib.rs
(+12 files in other folders)
