[package]
name = "metadata-wasm"
version = "1.0.0"
authors = ["Cora Johnson-Roberson <cora@corajr.com>"]
edition = "2021"
description = "WASM module for fast XML metadata generation"
license = "GPL-3.0-or-later OR MIT OR Palimpsest-0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
